--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,12 @@ body {
   color: #fff;
 }
 
+.fork-me {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
 @media screen and (min-width: 768px) {
   body {
     margin-top: 45px;
